--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "d3": "^7.8.5",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
